new contact, new main img

--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@
       <section class="work_section">
         <h2 class="title" style="font-size: 25px;">Характеристики</h2>
         <ul class="list1">
-          <li>Объем: 250мл</li>
-          <li>Цвет: Сыталь</li>
-          <li>Материал : Нержавеющая сталь, стекло</li>
+          <li>Цвет: Стальной</li>
+          <li>Материал : Металл, стекло</li>
           <li>Форма : Круглая</li>
           <li>Вес : 190г</li>
         </ul>
@@ -255,8 +254,8 @@
             Время работы: пн-вс 09:00 - 21:00
           </p>
           <p style="font-size: 15px; padding: 15px; text-align: center">
-            ООО "Цитруском" УНП 193699866
-            <br>220046, г. Минск, а/я 46
+            ООО "СЕЙЛАП" УНП 193677300
+            <br>220037, г.Минск, а/я 37
             <br>
           </p>
           <p style="font-size: 15px; padding: 5px; text-align: center;
@@ -264,12 +263,12 @@
             Акция действует на всей территории Беларуси
           </p>
           <p style="text-align: center">
-            Телефон: <a href="tel:+375293304493">+375 (29) 330-44-93</a>
+            Телефон: <a href="tel:+375256545376">+375 (25) 654-53-76</a>
           </p>
           <p style="text-align: center">
             E-mail:
-            <a href="mailto: citrustele@mail.ru">
-              citrustele@mail.ru</a>
+            <a href="mailto: seilup@mail.ru">
+              seilup@mail.ru</a>
           </p>
       
           <p style="text-align: center; padding-top: 15px;">
